--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <li class="active"><a href="index.html"> HOME </a></li>
           <li><a href="pagina2.html"> HOBBY </a></li>
           <li><a href="pagina3.html"> FOOD </a></li>
+          <li><a href="pagina4.html"> QUIZ </a></li>
         </ul>
       </div>
       <center><img src = "mifoto.jpg" height="300">
