--- a/pagina4.html
+++ b/pagina4.html
@@ -108,7 +108,7 @@
 <p class = "questions">7. El creador de JavaScript tiene como pariente a: </p>
 <input type = "radio" id = "mc" name = "question7" value = "Steve Jobs"> A. Steve Jobs<br>
 <input type = "radio" id = "mc" name = "question7" value = "Bill Gates"> B. Bill Gates<br>
-<input type = "radio" id = "mc" name = "question7" value = "Donald Trump"> C. Los creadores son hermanos<br>
+<input type = "radio" id = "mc" name = "question7" value = "Donald Trump"> C. Donald Trump<br>
 <input type = "radio" id = "mc" name = "question7" value = "Ninguno de los anteriores"> D. Ninguno de los anteriores<br>
 <br/>
 <br/>
