--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="pagina4.html"> QUIZ </a></li>
         </ul>
       </div>
-      <center><img src = "mifoto.jpg" height="300">
+      <center><img src = "Foto.jpg" height="300">
         <br />
         <h1>Angel Joel Colon Gonzalez</h1>
         <br/>
