--- a/pagina4.html
+++ b/pagina4.html
@@ -73,7 +73,7 @@
 <br/>
 <br/>
 
-<p class = "questions">3. ¿JavaScript es exclusivo para: </p>
+<p class = "questions">3. JavaScript es exclusivo para: </p>
 <input type = "radio" id = "mc" name = "question3" value = "Mac Os"> A. Mac Os<br>
 <input type = "radio" id = "mc" name = "question3" value = "Windows"> B. Windows<br>
 <input type = "radio" id = "mc" name = "question3" value = "Linux"> C. Linux<br>
